--- a/src/components/Newsletter/styles.module.css
+++ b/src/components/Newsletter/styles.module.css
@@ -114,9 +114,9 @@
 
 /* Theme variants */
 .secondary {
-  --ifm-color-primary: #f093fb;
-  --ifm-color-primary-dark: #f5576c;
-  --ifm-color-primary-rgb: 240, 147, 251;
+  --ifm-color-primary: #4A90B8;
+  --ifm-color-primary-dark: #3A7BA8;
+  --ifm-color-primary-rgb: 74, 144, 184;
 }
 
 .minimal {
